Thu Dec 15 21:06:24 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * bin/handlers/opensplice.locality.config:
        * bin/handlers/portico.locality.config:
        * bin/handlers/rtidds.locality.config:
        * bin/handlers/tcpip.locality.config:

          Added the Standard_Error deployment interceptor to the configurations
          since DAnCE crashes if there are no interceptors defined in the
          configuration.

        * cuts/arch/ccm/CCM_Component_Instance_Handler_T.h:
        * cuts/arch/ccm/CCM_Component_Instance_Handler_T.cpp:

          Converted the container variable to an auto pointer of the
          type CONTAINER. This allows the deployment handlers to get
          access to the concrete container type.

        * cuts/arch/ccm/CCM_Container_T.h:
        * cuts/arch/ccm/CCM_Container_T.inl:
        * cuts/arch/ccm/CCM_Container_T.cpp:
        * cuts/arch/tcpip/handlers/TCPIP_CCM_Container_Strategy.cpp:

          Renamed the SERVER parameter to INST_HANDLER.

        * cuts/arch/ccm/CCM_Events_T.h:
        * cuts/arch/ccm/CCM_Events_T.inl:
        * cuts/arch/ccm/CCM_Events_T.cpp:

          Renamed OBV_EVENT parameter to EVENT.

        * cuts/arch/ccm/CCM_Publisher_Table_T.h:
        * cuts/arch/ccm/CCM_Publisher_Table_T.inl:
        * cuts/arch/ccm/CCM_Publisher_Table_T.cpp:

          Added a BASE template parameter so you can sublcass from a concrete
          type that should provide standard interface.

          Added a PUBLISHER parameter that determines the individual publisher
          type for a consumer.

        * cuts/arch/ccm/CCM_Servant.inl:
        * cuts/arch/ccm/CCM_Servant_T.h:
        * cuts/arch/ccm/CCM_Servant_T.cpp:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.h:
        * cuts/arch/tcpip/ccm/TCPIP_CCM_Servant_T.inl:

          Bug fix where casting to T * in the constructor failed. This was
          resolved by passing 'this' to the constructor from the subclass.
